--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,11 @@
-html,
-body,
-div,
-h1,
-h2,
-p,
-ul,
-section {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-
 html {
   line-height: 1;
 }
-
-ul {
-  list-style: none;
-}
-
-section {
-  display: block;
-}
-
 body {
-  background: #edeff0;
-  padding: 50px 0 0;
+  background:rgba(85, 75, 65, 0.5);;
+  padding: 5px 0 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 62.5%;
+  font-size: 12px;
 }
 
 h1,
@@ -57,9 +32,9 @@ p {
   box-sizing: border-box;
   width: 90%;
   max-width: 640px;
-  max-height: 1135px;
+  /* max-height: 1135px; */
   background: white;
-  padding: 30px 15px;
+  padding: 15px 15px;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
@@ -67,6 +42,7 @@ p {
   -webkit-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+
 }
 
 .button {
@@ -105,4 +81,37 @@ p {
   -webkit-box-shadow: 0 2px 0 0 #2c6085;
   -moz-box-shadow: 0 2px 0 0 #2c6085;
   box-shadow: 0 2px 0 0 #2c6085;
+}
+
+#maincontainer{
+  background-color:black;
+  width:500px;
+  height:200px;
+}
+
+.blocks{
+  font-size: 3.2em;
+  color: rgb(240,240,200);
+  background-color:seagreen;
+  width:50px;
+  height:50px;
+  text-align: center;
+  line-height: 50px;
+  text-indent: 1px;
+  border-radius: 7px;
+  float: left;
+  margin-right:4px;
+}
+.blocks2{
+  font-size: 3.2em;
+  color: rgb(240,240,200);
+  background-color:rgb(0,190,100);
+  width:50px;
+  height:50px;
+  text-align: center;
+  line-height: 50px;
+  text-indent: 1px;
+  border-radius: 7px;
+  float: left;
+  margin-right:4px;
 }
