--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ h1,
 h2 {
   font-size: 2.4em;
   font-weight: 400;
-  margin-bottom: 8px; 
+  margin-bottom: 8px;
   color: #384047;
   line-height: 1.2;
 }
@@ -30,8 +30,10 @@ p {
 
 .container {
   box-sizing: border-box;
-  width: 90%;
-  max-width: 640px;
+  width: 100%;
+  min-width: 538px;
+  max-width: 738px;
+
   /* max-height: 1135px; */
   background: white;
   padding: 15px 15px;
@@ -44,6 +46,7 @@ p {
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
 
 }
+
 
 .button {
   background: #3f8abf;
@@ -100,7 +103,7 @@ p {
   text-indent: 1px;
   border-radius: 7px;
   float: left;
-  margin-right:4px;
+  margin:0 2px;
 }
 .blocks2{
   font-size: 3.2em;
@@ -113,5 +116,5 @@ p {
   text-indent: 1px;
   border-radius: 7px;
   float: left;
-  margin-right:4px;
+  margin:0 2px;
 }
