--- a/css/main.css
+++ b/css/main.css
@@ -21,20 +21,11 @@ h2 {
   font-size: 1.8em;
 }
 
-p {
-  color: #8d9aa5;
-  font-size: 1.4em;
-  margin-bottom: 15px;
-  line-height: 1.4;
-}
-
 .container {
   box-sizing: border-box;
   width: 100%;
   min-width: 538px;
   max-width: 738px;
-
-  /* max-height: 1135px; */
   background: white;
   padding: 15px 15px;
   margin: 0 auto;
@@ -44,55 +35,10 @@ p {
   -webkit-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
-
 }
 
 
-.button {
-  background: #3f8abf;
-  padding: 8px 18px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.4em;
-  color: white;
-  font-weight: 500;
-  border: 3px solid #3f8abf;
-  outline: none;
-  cursor: pointer;
-  display: -moz-inline-stack;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-  zoom: 1;
-  *display: inline;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 2px 0 0 #3574a0;
-  -moz-box-shadow: 0 2px 0 0 #3574a0;
-  box-shadow: 0 2px 0 0 #3574a0;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.button:hover {
-  background: #397cac;
-  border-color: #397cac;
-  -webkit-box-shadow: 0 2px 0 0 #2c6085;
-  -moz-box-shadow: 0 2px 0 0 #2c6085;
-  box-shadow: 0 2px 0 0 #2c6085;
-}
-
-#maincontainer{
-  background-color:black;
-  width:500px;
-  height:200px;
-}
-
-.blocks{
+.blocks {
   font-size: 3.2em;
   color: rgb(240,240,200);
   background-color:seagreen;
@@ -103,9 +49,9 @@ p {
   text-indent: 1px;
   border-radius: 7px;
   float: left;
-  margin:0 2px;
+  margin:0;
 }
-.blocks2{
+.blocks2 {
   font-size: 3.2em;
   color: rgb(240,240,200);
   background-color:rgb(0,190,100);
@@ -116,5 +62,12 @@ p {
   text-indent: 1px;
   border-radius: 7px;
   float: left;
-  margin:0 2px;
+  margin:0;
+}
+div {
+  margin: 0;
+}
+
+table {
+  border-spacing: 0;
 }
