--- a/sudoku.css
+++ b/sudoku.css
@@ -117,6 +117,6 @@ CSS---
 -- create circle timer
 -- remove red wrong, signal error in board.
 --- add sign in.
---- Change name to Global Sudoku
+--- Change name to Planet Sudoku
 Fixed - when changed to auto the margins cut off at a smaller width.
 */
