--- a/sudoku.css
+++ b/sudoku.css
@@ -1,6 +1,6 @@
 html {
   background-image: url("sand-texture.jpg");
-  box-shadow: 0 0 25px black inset;
+  //box-shadow: 0 0 25px black inset;
   background-repeat: no-repeat;
 
 }
